--- a/strony/en/home/mainpagetheme.css
+++ b/strony/en/home/mainpagetheme.css
@@ -66,3 +66,11 @@ footer {
 	font-family:'HelveticaNeue-Light';
 	text-align: center;
 }
+.link {
+	text-decoration: none;
+	font-weight: 400;
+	color:black;
+}
+.link:hover {
+	text-decoration: underline;
+}
